--- a/consultorio-online-ui/src/main/css/styles.scss
+++ b/consultorio-online-ui/src/main/css/styles.scss
@@ -1,5 +1,7 @@
-$border-radius: 10px;
+$border-radius: 8px;
 $border-color: grey;
+$header-background-color:#000060;
+$header-font-color:white;
 $phone-width: 768px;
 
 @mixin centered($width){
@@ -14,99 +16,350 @@ $phone-width: 768px;
 	border-color:$color;
 }
 
+@mixin shadow($h-shadow, $v-shadow, $blur, $color){
+	box-shadow: $h-shadow $v-shadow $blur $color;
+	-webkit-box-shadow: $h-shadow $v-shadow $blur $color;
+	-moz-box-shadow: $h-shadow $v-shadow $blur $color;
+}
+
+body{
+	font-family:Arial, Helvetica, sans-serif;
+}
+
 .navigation{
-	@include centered(80%);
-	@include bordered($border-color);
-	height:100px;
+	//@include centered(80%);
+	//@include bordered($border-color);
+	background-color:$header-background-color;
+	min-height:100px;
+	max-width: 100%;
+	width:100vw;
 	margin-bottom:10px;
+	color:$header-font-color;
+	@include shadow(0px, 1px, 10px, #888888);
+	.nav-content{
+		@include centered(80%);
+		font-size:1.5em;
+		padding-top:20px;
+		.controls{
+			float:right;
+			
+		}
+		
+	}
 }
 
 .header{
 	@include centered(80%);
-	height:100px;
+	height:60px;
 	box-sizing: border-box;
 	border-radius: $border-radius;
 	@include bordered($border-color);
+	padding-bottom:10px;
 	*{
-		padding:5px;
+		padding:10px;
 		box-sizing: border-box;
 		float:left;
 		height:100%;
+		font-size:1.5em;
 	}
 	.name{
-		width:80%;		
+		width:40%;	
+		padding:10px;
 	}
-	.control{
-		width:20%;
+	.status{
+		width:30%;
+		padding:10px;
+	}
+	.controls{
+		width:30%;
+		padding:10px;
+		a{
+			font-size:1em;
+		}
+	}
+	
+}
+
+.appointments{
+	border-radius: $border-radius;
+	@include bordered($border-color);
+	min-height:120px;
+	margin-bottom:10px;
+	padding-bottom:10px;
+	display:flex;
+	height:auto;
+	
+	
+	.next{
+		//float:left;
+		//background-color:#E3E3E3;
+		min-height:100px;
+		padding:10px;
+		width:40%;
+		.title{
+			padding-left: 15px;
+			padding-right: 15px;
+			font-size:1.5em;
+		}
+		.alert{
+			margin-left:15px;
+			width:auto;
+			text-align: center;
+			float:left;
+		}
+		.date{
+			float:left;
+			padding: 15px;
+		}
+	}
+	.previous{
+		//float:left;
+		//background-color:#E3E3E3;
+		min-height:100px;
+		padding:10px;
+		width:60%;
+		.title{
+			padding-left: 15px;
+			padding-right: 15px;
+			font-size:1.5em;
+		}
+		.date{
+			padding: 15px;
+		}
+	}
+}
+
+.medical-history{
+	.title{
+		padding-left: 15px;
+		padding-right: 15px;
+		padding-bottom:10px;
+		font-size:1.5em;
+	}
+	
+	accordion{
+		.panel-group{
+			.panel{
+				*{
+					text-decoration:none;
+					outline: 0;
+				}
+				.panel-heading{
+					.panel-title{
+						& > a{
+							& > span{
+								display:block;
+								width:100%;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	.list{
+		margin-top:20px;
+	}
+
+}
+
+.family-history{
+	.title{
+		padding-left: 15px;
+		padding-right: 15px;
+		font-size:1.5em;
 	}
 }
 
 .content{
 	@include centered(80%);
 	height:auto;
-	*{
-		padding:5px;
-		box-sizing: border-box;
-	}
+	display: inline-block;
+	
+
 	.leftColumn{
-		width:25%;
+		width:20%;
 		float:left;
 		padding-left:0px;
+		padding-top:5px;
+		/*
 		*{
 			border-radius: $border-radius;
 			@include bordered($border-color);
 			margin-bottom:5px;
 		}
-		.row1{
-			height:350px;
-		}
-		.row2{
-			height:200px;
-		}
+		*/
+		
+
 	}
 	.rightColumn{
-		width:75%;
+		width:80%;
 		float:left;
-		padding-left:0px;
-		*{
+		padding-left:5px;
+		padding-top:5px;
+		/**{
 			border-radius: $border-radius;
 			@include bordered($border-color);
 			margin-bottom:5px;
+		}*/
+		.row{
+			border-radius: $border-radius;
+			@include bordered($border-color);
+			margin:0;
+			margin-bottom:5px;
+			padding:5px;
+		box-sizing: border-box;
 		}
-		.row1{
-			height:100px;
+
+	}
+}
+
+.id-card{
+	.row{
+		border-radius: $border-radius;
+		@include bordered($border-color);
+		margin:0;
+		margin-bottom:5px;
+		padding:5px;
+		box-sizing: border-box;
+		background-color:white;
+		table.personal-info{
+			@include centered(90%);
+			tr{
+				border-bottom-style: solid;
+				border-width: 1px;
+				td{
+					margin-top:10px;
+				}
+			}
+			.title{
+				font-weight:bold;
+				max-width:60%;
+				display:block;
+				word-wrap: break-word;
+			}
 		}
-		.row2{
-			height:150px;
-		}
-		.row3{
-			height:150px;
-		}
-		.row4{
-			height:150px;
+	}
+	
+	.photo{
+		max-width: 300px;
+		display:block;
+		img{
+			width:100%;
 		}
 	}
 }
 
+.footer{
+	background-color:$header-background-color;
+	min-height:100px;
+	max-width: 100%;
+	width:100vw;
+	margin-top:10px;
+	color:$header-font-color;
+	
+	position:relative;
+	left:0px;
+	bottom:0px;
+	
+
+	@include shadow(0px, -1px, 10px, #888888);
+	.footer-content{
+		@include centered(80%);
+		padding-top:10px;
+	}
+}
+
 @media screen and (max-width: $phone-width) {
-	.content{
-		height:1000px;
-		*{
-			box-sizing:initial;
-			margin-bottom:10px;
+	.navigation{
+		min-height:60px;
+		.nav-content{
+			font-size:1em;		
 		}
+	}
+	
+	.header{
+
+		*{
+			font-size:1em;
+		}
+		.name{
+			width:40%;	
+			padding:20px;
+		}
+		.status{
+			width:30%;
+			padding:20px;
+		}
+		.control{
+			width:30%;
+			padding:20px;
+		}
+		
+	}
+
+	.content{
 		.leftColumn{
 			padding:0px;
 			padding-top:5px;
 			width:100%;
 			float:none;
+			.row{
+				@include centered(98%);
+			}
 		}
 		.rightColumn{
 			padding:0px;
 			padding-top:5px;
 			width:100%;
 			float:none;
+			.row{
+				@include centered(98%);
+			}
 		}
+	}
+	
+	
+	.appointments{
+		display:inline-block;
+		@include centered(98%);
+		.next{
+			clear:both;
+			width:100%;
+
+			.title{
+				padding-left: 15px;
+				padding-right: 15px;
+				font-size:1.5em;
+			}
+			.alert{
+				margin-left:15px;
+				width:auto;
+				text-align: center;
+				float:left;
+			}
+			.date{
+				float:left;
+				padding: 15px;
+			}
+		}
+		.previous{
+			clear:both;
+			width:100%;
+
+			.title{
+				padding-left: 15px;
+				padding-right: 15px;
+				font-size:1.5em;
+			}
+			.date{
+				padding: 15px;
+			}
+		}
+	}
+	
+	.footer{
+		min-height:60px;
 	}
 	
 }
