--- a/consultorio-online-ui/src/main/ui/css/styles.scss
+++ b/consultorio-online-ui/src/main/ui/css/styles.scss
@@ -22,6 +22,10 @@ $phone-width: 768px;
 	-moz-box-shadow: $h-shadow $v-shadow $blur $color;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 body{
 	font-family:Arial, Helvetica, sans-serif;
 }
