Cleaned code after Grunt

--- a/consultorio-online-web/src/main/webapp/css/styles.css
+++ b/consultorio-online-web/src/main/webapp/css/styles.css
@@ -45,7 +45,7 @@ html, body {
   border-radius: 8px;
   border-style: solid;
   border-width: 1px;
-  border-color: gray;
+  border-color: grey;
   padding-bottom: 10px;
   margin-top: 10px;
 }
@@ -76,7 +76,7 @@ html, body {
   border-radius: 8px;
   border-style: solid;
   border-width: 1px;
-  border-color: gray;
+  border-color: grey;
   min-height: 120px;
   margin-bottom: 10px;
   padding-bottom: 10px;
@@ -177,7 +177,7 @@ html, body {
   border-radius: 8px;
   border-style: solid;
   border-width: 1px;
-  border-color: gray;
+  border-color: grey;
   margin: 0;
   margin-bottom: 5px;
   padding: 5px;
@@ -188,7 +188,7 @@ html, body {
   border-radius: 8px;
   border-style: solid;
   border-width: 1px;
-  border-color: gray;
+  border-color: grey;
   margin: 0;
   margin-bottom: 5px;
   padding: 5px;
@@ -328,3 +328,5 @@ html, body {
 table.table-hover tbody tr {
   cursor: pointer;
 }
+
+/*# sourceMappingURL=styles.css.map */
